fix issue with top rated product not well aligned to the center

--- a/assets/css/base/gutenberg-blocks.scss
+++ b/assets/css/base/gutenberg-blocks.scss
@@ -680,3 +680,11 @@
 		}
 	}
 }
+
+// Top rated products
+.wc-block-grid {
+	img {
+		display: block;
+		margin: 0 auto ms(3);
+	}
+}
